--- a/frontend.yml
+++ b/frontend.yml
@@ -8,10 +8,15 @@
         name: nginx
         state: present
 
-    - name: Remove Old HTML Directory
+    - name: Copy Expense config file
       ansible.builtin.copy:
         src: expense.conf
         dest: /etc/nginx/default.d/expense.conf
+
+    - name: Remove Old HTML Directory
+      ansible.builtin.file:
+        path: /usr/share/nginx/html/
+        state: absent
 
     - name: Create HTML directory
       ansible.builtin.file:
