--- a/backend.yml
+++ b/backend.yml
@@ -57,7 +57,7 @@
         target: /app/schema/backend.sql
         login_user: root
         login_password: ExpenseApp@1
-        login_host:
+        login_host: 172.31.29.243
 
     - name: Start backend service
       ansible.builtin.systemd_service:
