--- a/backend.service
+++ b/backend.service
@@ -3,7 +3,7 @@ Description = Backend Service
 
 [Service]
 User=expense
-Environment=DB_HOST="172.31.29.243"
+Environment=DB_HOST="mysql-dev.devopsengineer.online"
 ExecStart=/bin/node /app/index.js
 SyslogIdentifier=backend
 
