--- a/backend.yml
+++ b/backend.yml
@@ -59,7 +59,7 @@
         target: /app/schema/backend.sql
         login_user: root
         login_password: ExpenseApp@1
-        login_host: 172.31.29.243
+        login_host: mysql-dev.devopsengineer.online
 
     - name: Start backend service
       ansible.builtin.systemd_service:
