--- a/roles/backend/tasks/main.yml
+++ b/roles/backend/tasks/main.yml
@@ -41,7 +41,7 @@
     target: /app/schema/backend.sql
     login_user: root
     login_password: ExpenseApp@1
-    login_host: mysql-{{env}}.devopsengineer.online
+    login_host: mysql-{{env}}.devopsengineer2.online
 
 - name: Start backend service
   ansible.builtin.systemd_service:
