--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -11,3 +11,4 @@
 
 - name: Set root Password
   ansible.builtin.shell: mysql_secure_installation --set-root-pass {{ secrets.MYSQL_PASS }}
+  ignore_errors: yes
